Add missing authentication boiler plate code